// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioIconClassic> should render correctly when is checked 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0376DA;
  border-radius: 100%;
  border: 1px solid currentColor;
  height: 16px;
  min-height: 16px;
  width: 16px;
  min-width: 16px;
}

.c0::after {
  min-width: 8px;
  min-height: 8px;
  border-radius: 100%;
  background: currentColor;
  visibility: visible;
  content: '';
}

<div
  className="c0"
/>
`;

exports[`<RadioIconClassic> should render correctly when is focused 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #6FB1EA;
  border-radius: 100%;
  border: 1px solid currentColor;
  height: 16px;
  min-height: 16px;
  width: 16px;
  min-width: 16px;
}

<div
  className="c0"
/>
`;

exports[`<RadioIconClassic> should render correctly when is mouse is over 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #A4B8D1;
  border-radius: 100%;
  border: 1px solid currentColor;
  height: 16px;
  min-height: 16px;
  width: 16px;
  min-width: 16px;
}

<div
  className="c0"
/>
`;

exports[`<RadioIconClassic> should render correctly with classic theme 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #A4B8D1;
  border-radius: 100%;
  border: 1px solid currentColor;
  height: 16px;
  min-height: 16px;
  width: 16px;
  min-width: 16px;
}

<div
  className="c0"
/>
`;

exports[`<RadioIconClassic> should render correctly with label 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #A4B8D1;
  border-radius: 100%;
  border: 1px solid currentColor;
  height: 16px;
  min-height: 16px;
  width: 16px;
  min-width: 16px;
  margin-right: 8px;
}

<div
  className="c0"
/>
`;
